JIRA Id:NA Crucible Id:NA Type of change:F Description: Fixing alignment of icons buttons on landing page such as search, add, export and toggle for campaign.

--- a/web-client/hubclient/src/theme.scss
+++ b/web-client/hubclient/src/theme.scss
@@ -199,6 +199,15 @@ $athena-theme: (
     padding-left: 5px;
     margin-left: 12px;
     margin-right: 28px;
+    .agg-icon-buttons{
+      margin-top: 20px;
+      button{
+          margin-left: 5px; 
+          margin-right:5px;
+          padding: 0.5rem 1rem;
+          font-size: 1rem;
+      }
+  }  
   }
   .filter-and-cards-container{
     padding:2px;
